--- a/5.Browser/activity/excel_clone/style.css
+++ b/5.Browser/activity/excel_clone/style.css
@@ -8,15 +8,9 @@ body{
     /* border:1px solid red; */
 }
 
-.menu-container{
-    height:80px;
-    background-color: lightblue;
-}
 
-.formula-container{
-    height:30px;
-    background-color: lightgreen;
-}
+
+
 
 .grid_container{
     height:calc(100vh - ( 80px + 30px + 40px) );
@@ -24,22 +18,31 @@ body{
     overflow:scroll;
     position:relative;
 }
+.grid_container::-webkit-scrollbar{
+    display:none;
+}
 
 .icon{
-    color: blue;
+    color:rgb(113, 140, 179);
+    width:30px;
+    text-align: center;
+    
 }
 .sheets{
     height:40px;
-    background-color: lightgray;
+    background-color: rgb(175, 171, 171);
     display:flex;
     align-items: center;
     font-size: 1.2rem;
+    overflow: auto;
 }
 .sheet-list{
     height:100%;
     display:flex;
     align-items: center;
-
+}
+.sheets::-webkit-scrollbar{
+    display:none;
 }
 .sheet{
     height:100%;
@@ -51,11 +54,20 @@ body{
 .active-sheet{
     background-color: whitesmoke;
 }
+.plus-container{
+    border-right: 2px solid darkgrey;
+    border-top:  2px solid darkgrey;
+    height:100%;
+    display:flex;
+    justify-content: center;
+    align-items: center;
+}
 
 .top-left-block{
     height:30px;
     width:30px;
-    background-color: gray;
+    background-color: rgb(175, 171, 171);
+    border-top: 1px solid;
 }
 
 .top-row{
@@ -65,6 +77,9 @@ body{
     position:absolute;
     left: 30px;
     top:0px;
+    text-align:center;
+    justify-content: center;
+    align-items: center;
 }
 
 .left-col{
@@ -72,12 +87,12 @@ body{
 }
 .col{
     min-width:80px;
+    max-width: 80px;
     border:1px solid;
     min-height:30px;
-    display:flex;
+    /* display:flex;
     align-items: center;
-    justify-content: center;
-    text-align:center;
+    justify-content: center; */
 }
 .left-col_box{
     height:30px;
@@ -93,4 +108,86 @@ body{
     position:absolute;
     top:30px;
     left:30px;
+}
+
+
+/* ********************************menu******************************  */
+.menu-container{
+    height:80px;
+    background-color: lightsteelblue;
+    display:flex;
+    align-items:center;
+}
+
+.menu-container>*{
+    height:80%;
+    width:20%;
+    border-right:2px solid;
+}
+
+.formatting-container{
+display:flex;
+justify-content: space-around;
+}
+
+.subgroup{
+    width:45%;
+    height:100%;
+    display:flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+}
+
+.subgroup>*{
+    width:100%;
+}
+
+.alignment-container{
+    display:flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.alignment-container>*{
+    width:20%;
+}
+
+.bui_container{ 
+    display:flex;
+    justify-content: space-between;
+}
+.bui_container>*{
+    width:30%;
+}
+
+.color-container{
+    display:flex;
+    justify-content: space-between;
+}
+
+.color-container>*{
+    width:45%;
+}
+
+.font-size_container{
+    width:100%;
+}
+
+
+.formula-container{
+    height:30px;
+    background-color: rgb(175, 171, 171);
+    display:flex;
+    align-items: center;
+    justify-content: space-around;
+}
+.separator{
+    width:1%;
+    text-align: center;
+}
+.address-box{
+    width:10%;
+}
+.formula-box{
+    width:77%;
 }
