--- a/5.Browser/activity/excel_clone/style.css
+++ b/5.Browser/activity/excel_clone/style.css
@@ -24,8 +24,10 @@ body{
 
 .icon{
     color:rgb(113, 140, 179);
-    width:30px;
+    width:100%;
     text-align: center;
+    -webkit-text-stroke: 1px rgb(83, 81, 81);
+    font-size: 1.3rem;
     
 }
 .sheets{
@@ -35,6 +37,7 @@ body{
     align-items: center;
     font-size: 1.2rem;
     overflow: auto;
+    border-top: 2px solid  rgb(83, 81, 81);
 }
 .sheet-list{
     height:100%;
@@ -53,19 +56,22 @@ body{
 }
 .active-sheet{
     background-color: whitesmoke;
+    border-left:6px solid gray;
+    border-right:6px solid gray;
+    border-bottom:6px solid gray;
 }
 .plus-container{
-    border-right: 2px solid darkgrey;
-    border-top:  2px solid darkgrey;
     height:100%;
+    width:35px;
     display:flex;
     justify-content: center;
     align-items: center;
+    border-right: 2px solid  rgb(83, 81, 81);
 }
 
 .top-left-block{
     height:30px;
-    width:30px;
+    width:35px;
     background-color: rgb(175, 171, 171);
     border-top: 1px solid;
 }
@@ -75,7 +81,7 @@ body{
     display:flex;
     background-color: lightsteelblue;
     position:absolute;
-    left: 30px;
+    left: 35px;
     top:0px;
     text-align:center;
     justify-content: center;
@@ -83,12 +89,12 @@ body{
 }
 
 .left-col{
-    width:30px;
+    width:35px;
 }
 .col{
     min-width:80px;
     max-width: 80px;
-    border:1px solid;
+    border:1px solid black;
     min-height:30px;
     /* display:flex;
     align-items: center;
@@ -107,7 +113,7 @@ body{
 .grid{
     position:absolute;
     top:30px;
-    left:30px;
+    left:35px;
 }
 
 
@@ -119,19 +125,24 @@ body{
     align-items:center;
 }
 
-.menu-container>*{
+/* .menu-container>*{
     height:80%;
     width:20%;
     border-right:2px solid;
-}
+} */
 
 .formatting-container{
+    height:80%;
+    width:20%;
+    min-width:250px;
+    border-right:2px solid;
 display:flex;
 justify-content: space-around;
 }
 
 .subgroup{
     width:45%;
+    min-width:100px;
     height:100%;
     display:flex;
     flex-direction: column;
@@ -143,6 +154,10 @@ justify-content: space-around;
 }
 
 .alignment-container{
+    height:80%;
+    width:20%;
+    min-width:120px;
+    border-right:2px solid;
     display:flex;
     justify-content: center;
     align-items: center;
@@ -158,6 +173,7 @@ justify-content: space-around;
 }
 .bui_container>*{
     width:30%;
+    min-width:22px;
 }
 
 .color-container{
@@ -190,4 +206,44 @@ justify-content: space-around;
 }
 .formula-box{
     width:77%;
+}
+
+.theme-container{
+    border:none;
+    height:80%;
+    width:60%;
+    display:flex;
+    padding-right:15px;
+    justify-content:flex-end;
+    align-items: flex-start;
+    
+}
+
+.theme-select{
+    height:100%;
+    min-width:2%;
+    display:flex;
+    justify-content: space-around;
+    flex-direction: column;
+}
+.theme{
+    height:20%;
+    width:100%;
+    min-width:15px;
+    border:1px solid rgb(83, 81, 81);
+    border-radius: 50px;
+}
+.rosybrown{
+    background-color:rosybrown;
+}
+.tan{
+    background-color:tan;
+}
+
+.darkolivegreen{
+    background-color:darkolivegreen;
+}
+
+.lightsteelblue{
+    background-color: lightsteelblue;
 }
