--- a/5.Browser/activity/excel_clone/style.css
+++ b/5.Browser/activity/excel_clone/style.css
@@ -248,3 +248,8 @@ justify-content: space-around;
 .lightsteelblue{
     background-color: lightsteelblue;
 }
+
+
+.active-btn{
+    background-color: grey;
+}
