--- a/5.Browser/activity/excel_clone/style.css
+++ b/5.Browser/activity/excel_clone/style.css
@@ -15,8 +15,12 @@ body{
 .grid_container{
     height:calc(100vh - ( 80px + 30px + 40px) );
     background-color: whitesmoke;
-    overflow:scroll;
-    position:relative;
+    position:absolute;
+    display: flex;
+    top:110px;
+    flex-direction:column;
+    min-width: 100vw;
+
 }
 .grid_container::-webkit-scrollbar{
     display:none;
@@ -75,22 +79,30 @@ body{
     width:35px;
     background-color: rgb(175, 171, 171);
     border-top: 1px solid;
+    position: absolute;
+    top:110px;
+    left:0;
+
 }
 
 .top-row{
     height:30px;
     display:flex;
     background-color: lightsteelblue;
-    position:absolute;
-    left: 35px;
-    top:0px;
+    /* position:absolute; */
+    left: 350px;
+    top: 0px;;
     text-align:center;
     justify-content: center;
     align-items: center;
+    position: sticky;
+
 }
 
 .left-col{
     width:35px;
+    position:sticky;
+    top:30px;
 }
 .col{
     min-width:80px;
@@ -106,6 +118,7 @@ body{
     background-color: lightsteelblue;
     text-align:center;
     border: 1px solid;
+    position:sticky;
 }
 
 .row{
@@ -115,6 +128,8 @@ body{
     position:absolute;
     top:30px;
     left:35px;
+    overflow:scroll;
+
 }
 
 
